# compress_comics

./: .gitignore  README.md  compressArchive.py  compress_archive.py  compress_comics.py  pyproject.toml
.github/workflows/: generate-release.yml
src/compress_comics/: __init__.py  argument_parser.py  comic_compressor.py  compress_comics.py  custom_bar.py
src/compress_comics_TheHardew/: comic_compressor.py  compress_comics.py  text_bar.py
tests/: expected_files.txt  test_compression.py
